fix: Update Tailwind CSS configuration to remove wraping tick marks on inline code (#5)

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -1197,11 +1197,11 @@ input[type="checkbox"]:focus:is(.dark *) {
 }
 
 .prose :where(code):not(:where([class~="not-prose"],[class~="not-prose"] *))::before {
-  content: "`";
+  content: normal;
 }
 
 .prose :where(code):not(:where([class~="not-prose"],[class~="not-prose"] *))::after {
-  content: "`";
+  content: normal;
 }
 
 .prose :where(a code):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
@@ -1607,12 +1607,20 @@ input[type="checkbox"]:focus:is(.dark *) {
   height: 1rem;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
 
 .h-8 {
   height: 2rem;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .max-h-\[80vh\] {
@@ -1835,6 +1843,11 @@ input[type="checkbox"]:focus:is(.dark *) {
   --tw-gradient-to: #fff var(--tw-gradient-to-position);
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -2022,6 +2035,10 @@ input[type="checkbox"]:focus:is(.dark *) {
   transition-duration: 200ms;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -2142,6 +2159,12 @@ input[type="checkbox"]:focus:is(.dark *) {
 
 .focus\:ring-\[var\(--color-primary\)\]:focus {
   --tw-ring-color: var(--color-primary);
+}
+
+.group:hover .group-hover\:scale-105 {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .dark\:border-gray-700:is(.dark *) {
